2015-11-22  Gabriel Dos Reis  <gdr@axiomatics.org>

	* Move all source header files into dedicated ipr/ directory.
	Simplifies build and installation setup.

2015-11-19  Gabriel Dos Reis  <gdr@axiomatics.org>

	* impl.hxx (impl::stable_farm<>): New.
	Use in lieu of homegrown util::slist<T>.
	(util::slist<>): Remove.
	* traversal.hxx (ipr): Remove workarounds for ancient VC++.

2010-11-13  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* impl.H (expr_factory::make_phantom): Add overload taking a type
	argument. 

2010-07-23  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* impl.H (impl::expr_factory::make_id_expr): Add new overload for Decl.

2010-05-28  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interface.H (Initializer_list): New.
	* impl.H: Provide implementation for Initializer_list.

2010-04-26  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interface.H (Unit::get_typename): Declare.
	* impl.H (impl::Unit::get_typename): Likewise.

2010-03-29  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* impl.H (expr_factory::make_identifier): Add overloads.
	(expr_factory::make_operator): Likewise.

2010-03-29  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interface.H (C_linkage): Remove.
	(Cxx_linkage): Likewise.
	(Visitor::visit(const C_linkage&)): Likewise.
	(Visitor::visit(const Cxx_linkage&)): Likewise.
	* impl.H (Unit::get_linkage): Move to...
	(expr_factory::get_linkage): ... here.
	(type_factory::make_as_type): Add unary overload.
	(Unit::get_cxx_linkage): Simplify return type.
	(Unit::get_c_linkage): Likewise.
	(Unit::cxx_linkage): Remove.
	(Unit::c_linkage): Likewise.
	(Unit::linkages): Move to ...
	(expr_factory::linkages): ...here.

2010-03-29  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* impl.H (expr_factory::make_literal): Add overloads for 'const
	char*' and 'const std::string&'.

2010-03-29  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* impl.H (Unit::get_string): Move to...
	(expr_factory::get_string): ... here.

2009-09-22  Gabriel Dos Reis  <gdr@cs.tamu.edu>
