@@ -1,3 +1,7 @@
+2015-11-29  Gabriel Dos Reis  <gdr@axiomatics.org>
+
+	* impl.cxx: Implement modifications to ipr::Enum.
+
 2010-07-23  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
 	* impl.C (impl::expr_factory::make_id_expr): Define new overload.
